fix scrollbar appearing for no reason

--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -115,3 +115,7 @@
     color-scheme: dark;
   }
 }
+
+html {
+  overflow-y: hidden;
+}
